[workspace]
members = [
    "puniyu_cli",
    "puniyu_cli_node"
]
default-members = ["puniyu_cli"]
resolver = "2"

[workspace.package]
authors = ["wuliya <3369906077@qq.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/puniyu/cli"
repository = "https://github.com/puniyu/cli"
edition = "2024"
rust-version = "1.88.0"
