[package]
name = "puniyu_cli"
version = "0.1.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "puniyu-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
dialoguer = "0.12.0"
handlebars = "6.3.2"
serde = { version = "1", features = ["derive"] }
include_dir = "0.7.4"
inquire = "0.9.1"
