[package]
name = "puniyu-cli"
version = "0.1.3"
description = "puniyu cli"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords = [
    "cli",
    "puniyu",
    "puniyu-cli"
]
include = [
    "src/",
    "template/"
]

[[bin]]
name = "puniyu-cli"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/cli-v{ version }/{ name }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
handlebars = "6.3.2"
serde = { version = "1", features = ["derive"] }
include_dir = "0.7.4"
inquire = "0.9.1"
