[package]
name = "puniyu_cli_node"
version = "0.2.1"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0" }
napi-derive = "3.0.0"

puniyu-cli = { path = "../puniyu_cli" }

[build-dependencies]
napi-build = "2"